# Remindam-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 075fe2120f39_add_terms_accepted_at_to_users.py  095d598bceb9_rename_twilio_sid_to_provider_message_id.py  1657b31fc815_add_ondelete_cascade_to_all_user_fks.py  269f1c512db4_add_deleted_at_to_users.py  3ce5d6ba06e2_add_deletion_warning_sent_at_tracking.py  4dd76cd692ef_add_cascade_to_medication_schedules.py  6d64bc3bf910_initial_schema.py  903bbe38c426_fix_message_logs_columns.py  d713bc16efa9_schema_updates.py  fb7303f5f48e_add_item_type.py
app/: config.py  database.py  main.py  payment.py  scheduler.py  security.py
app/models/: __init__.py  adherence_report.py  medication.py  message.py  payment.py  reminder.py  subscription.py  user.py
app/routes/: medications.py  payments.py  reports.py  users.py  whatsapp.py
app/schemas/: adherence_report.py  medication.py  message.py  payment.py  reminder.py  subscription.py  user.py
app/services/: adherence_service.py  flow_service.py  intent_service.py  medication.py  message_types.py  payment_service.py  reminder_service.py  report_formatter.py  state_service.py  subscription_service.py  user_service.py  whatsapp_service.py
tests/: conftest.py  test_basic.py  test_flow_simulation.py  test_paystack_integration.py  test_webhook_extraction.py  verify_celery_logic.py
(+11 files in other folders)
